Parse JSON schema into a generation schedule

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ dynamic = ["version"]
 test = [
     "diffusers",
     "pre-commit",
+    "pydantic",
     "pytest",
     "torch",
     "transformers"
